# hybrid-address

./: .gitignore  API_ARRAY_SUPPORT.md  CODE_FLOW_ANALYSIS.md  DATA_PREPROCESSING_PIPELINE.md  LICENSE.txt  MANIFEST.in  PIPELINE_STAGES_BENEFIT_ANALYSIS.md  PKG-INFO  README.md  api_server.py  compare_pipeline_stages.py  data_structuring_output.json  example_direct_model_usage.py  pipeline_comparison_report.json  pyproject.toml  requirements.txt  setup.py  skp-client.py  test_api_array.py  test_api_client.py
data_structuring/: config.py  pipeline.py  run.py
data_structuring/components/: database.py  details.py  flags.py  types.py
data_structuring/components/data_provider/: __init__.py  country_provider.py  geoname_provider.py  normalization.py  osm_towns_provider.py  post_code_provider.py  town_provider.py
data_structuring/components/fuzzy_matching/: fuzzy_scan.py
data_structuring/components/models/: __init__.py  country_head.py  crf_base.py  crf_with_marginal.py  encoder_transformer.py  transformer_crf.py  utils.py
data_structuring/components/post_code_matching/: post_code_match.py
data_structuring/components/readers/: base_reader.py  dataframe_reader.py  file_reader.py  text_stream_reader.py
data_structuring/components/runners/: __init__.py  base_runner.py  result_processing.py  runner_crf.py  runner_fuzzy_match.py  runner_post_processing.py  runner_postcode_match.py
data_structuring/preprocessing/: preprocess_geonames_countries.py  preprocess_geonames_postcodes.py  preprocess_geonames_towns.py  preprocess_rest_countries.py  preprocess_utils.py
resources/: LICENSE.txt  NOTICES.txt  PKG-INFO  country_names.json  country_province_names.json  pyproject.toml  town_aliases.json
resources/input/: addresses_gauntlet.csv  addresses_wikipedia.csv  sample.txt
resources/misc/: country_city_same_name.json  country_groupings_with_iso_code.json  country_specs.json
resources/models/: CRF_with_MLP_EPOCH_1.config.json
resources/post_codes/: almost_all_countries_regex_list.json  argentina_dict.json  argentina_regex_list.json  brazil_dict.json  brazil_regex_list.json  chile_dict.json  chile_regex_list.json  china_dict.json  china_regex_list.json  ireland_dict.json  ireland_regex_list.json  malta_dict.json  malta_regex_list.json
(+9 files in other folders)
