[build-system]
requires = ["setuptools>=53.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swift_address_structuring"
version = "1.0.0"
description = "ISO Address Structuring Package"
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE.txt", "LICENSE.pdf"]

# Core dependencies that are always required
dependencies = [
  "anyascii==0.3.3",
  "orjson==3.11.2",
  "torch==2.8.0",
  "fuzzysearch==0.7.3",
  "polars==1.34.0",
  "pydantic==2.11.10",
  "pydantic-settings==2.10.1",
  "safetensors==0.6.2",
  "RapidFuzz==3.13.0",
  "fastparquet==2024.11.0",
  "jellyfish==1.2.0"
]

# Optional dependencies for extra scripts, notebooks, training, or visualization.
[project.optional-dependencies]
dev = [
  "pandas==2.3.1",
  "geopandas==1.0.1",
  "scikit-learn==1.6.0",
  "Flask==3.0.3",
  "python-dotenv==1.0.1",
  "ijson==3.3.0",
  "tqdm==4.67.0",
  "overpy==0.7",
  "ipython==8.18.1",
  "jupyter==1.1.1",
  "seaborn==0.13.2",
  "colored==2.2.4",
  "faker==33.0.0",
  "matplotlib==3.9.2"
]

[tool.setuptools.packages.find]
include = ["data_structuring*"]

[project.scripts]
iso_run = "data_structuring.run:_cli"